# ai-website-generator

./: .gitignore  README.md  app.py  pyproject.toml  requirements-dev.txt  requirements.txt
.devcontainer/: devcontainer.json
.streamlit/: config.toml  secrets.toml.example
src/ai_website_generator/: __init__.py  __main__.py  app.py  config.py  constants.py
src/ai_website_generator/api/: __init__.py  openrouter.py
src/ai_website_generator/providers/: __init__.py  anthropic.py  base.py  custom.py  groq.py  openai.py  openrouter.py  registry.py
src/ai_website_generator/ui/: __init__.py  components.py  styles.py
src/ai_website_generator/utils/: __init__.py  code_extractor.py  session.py
tests/: __init__.py  test_code_extractor.py  test_session.py
